--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "ebb481bc",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_22372\\3453287815.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_22372\\2777662490.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -440,7 +440,7 @@
        "[74881 rows x 30 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
    "source": [
     "import pandas as pd \n",
     "accident = pd.read_csv(\n",
-    "    r\"data\\NYC Accidents 2020.csv\"\n",
+    "    r\"NYC Accidents 2020.csv\"\n",
     ")\n",
     "import janitor\n",
     "accident = accident.clean_names()\n",
